--- a/V2rayNG/app/src/main/res/layout/nav_header.xml
+++ b/V2rayNG/app/src/main/res/layout/nav_header.xml
@@ -21,5 +21,14 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/colorText" />
 
+    <TextView 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+        android:layout_gravity="center" 
+        android:gravity="center" 
+        android:layout_marginTop="8dp"
+        android:text="@string/xyc"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small" 
+        android:textColor="@color/colorText" />
 
 </LinearLayout>
