--- a/YiLink/app/src/main/res/menu/menu_drawer.xml
+++ b/YiLink/app/src/main/res/menu/menu_drawer.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:id="@+id/group_main">
+    <group
+        android:id="@+id/group_main">
         <item
             android:id="@+id/sub_setting"
             android:icon="@drawable/ic_subscriptions_24dp"
@@ -20,16 +21,12 @@
 
     <group android:id="@+id/group_id2">
         <item
-            android:id="@+id/promotion"
-            android:icon="@drawable/ic_promotion_24dp"
-            android:title="@string/title_pref_promotion" />
-        <item
             android:id="@+id/logcat"
             android:icon="@drawable/ic_logcat_24dp"
             android:title="@string/title_logcat" />
         <item
             android:id="@+id/about"
-            android:icon="@drawable/ic_about_24dp"
+            android:icon="@drawable/ic_info_24dp"
             android:title="@string/title_about" />
         <!-- place holder for version text at the bottom -->
         <item
