--- a/YiLink/app/src/main/res/layout/nav_header.xml
+++ b/YiLink/app/src/main/res/layout/nav_header.xml
@@ -19,8 +19,7 @@
         android:gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/app_namech"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/colorText" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <TextView 
         android:layout_width="wrap_content" 
@@ -30,7 +29,6 @@
         android:layout_marginTop="8dp"
         android:text="@string/xyc"
         android:fontFamily="@font/xyc"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small" 
-        android:textColor="@color/colorText" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"  />
 
 </LinearLayout>
