--- a/YiLink/app/src/main/res/values-night/colors.xml
+++ b/YiLink/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,7 @@
     <color name="color_fab_active">#f97910</color>
     <color name="color_fab_inactive">#646464</color>
     <color name="color_secondary">#BDBDBD</color>
-
+    <color name="colorText">#FFFFFF</color>
     <color name="colorPrimary">#212121</color>
     <color name="colorAccent">#FFFFFF</color>
 </resources>
