--- a/YiLink/app/src/main/res/values/colors.xml
+++ b/YiLink/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="color_fab_active">#f97910</color>
     <color name="color_fab_inactive">#9C9C9C</color>
     <color name="color_secondary">#727272</color>
-
+    <color name="colorText">#000000</color>
     <color name="colorPrimary">#F5F5F5</color>
     <color name="colorAccent">#000000</color>
 </resources>
