--- a/YiLink/app/src/main/res/values/colors.xml
+++ b/YiLink/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPing">#009966</color>
     <color name="colorPingRed">#FF0099</color>
-    <color name="colorConfigType">#f97910</color>
+    <color name="colorConfigType">#5579f2</color>
 
-    <color name="color_fab_active">#f97910</color>
+    <color name="color_fab_active">#5579f2</color>
     <color name="color_fab_inactive">#9C9C9C</color>
     <color name="color_secondary">#727272</color>
     <color name="colorText">#000000</color>
